# OpenglCamerxRecord

./: settings.gradle
Opencv/: build.gradle
Opencv/src/androidTest/java/com/camera/opencv/: ExampleInstrumentedTest.java
Opencv/src/main/: AndroidManifest.xml
Opencv/src/main/cpp/: CMakeLists.txt  opencv_native_jni.cpp
Opencv/src/main/java/com/camera/opencv/: OpencvUtils.java
Opencv/src/test/java/com/camera/opencv/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/xgbk/openglcameraxrecord/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xgbk/openglcameraxrecord/: GLCameraView.java  MainActivity.java
app/src/main/java/com/xgbk/openglcameraxrecord/utils/: OpenGLUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: camera_vertex.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/xgbk/openglcameraxrecord/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
